--- a/sugar/media/locale/hu/LC_MESSAGES/djangojs.po
+++ b/sugar/media/locale/hu/LC_MESSAGES/djangojs.po
@@ -1,23 +1,39 @@
-# Hungarian translation of Javascript files.
-# Copyright (C) 2009 THE Javascript files'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the Javascript files package.
-# nagyv <viktor@coosci.com>, 2009.
+# Hungarian translation of eKe mintasite js
+# Copyright (C) 2010 THE eke-demo-js'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the eke-demo-js package.
+# nagyv <viktor@coosci.com>, 2010.
 # , fuzzy
-# 
-# 
+#
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Javascript files 1.0\n"
+"Project-Id-Version: eke-demo-js VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-09 12:36+0100\n"
-"PO-Revision-Date: 2009-11-09 12:42+0100\n"
+"POT-Creation-Date: 2010-01-05 12:59+0100\n"
+"PO-Revision-Date: 2010-01-05 12:58+0100\n"
 "Last-Translator: nagyv <viktor@coosci.com>\n"
 "Language-Team: Hungarian <hu@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: static/media/js/custom-forms.js:33
 msgid "Add another"
 msgstr "Új hozzáadása"
 
+#: static/media/js/custom-forms.js:113
+msgid "Jump to"
+msgstr "Ugrás"
+
+#: static/media/js/defaults.js:11 static/media/js/defaults.js.py:15
+msgid "Your data was sent. Please wait ..."
+msgstr "Kérem várjon ..."
+
+#: static/media/js/admin/collapse_stacked.js:16
+#: static/media/js/admin/collapse_stacked.js:22
+msgid "Show"
+msgstr "Mutat"
+
+#: static/media/js/admin/collapse_stacked.js:27
+msgid "Hide"
+msgstr "Elrejt"
